--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="author" contant="Hank Tsou">
   <meta name="description" content="Hank's personnal website">
   <h1>Contact Me</h1>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
