--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <meta name="author" contant="Hank Tsou">
   <meta name="description" content="Hank's personnal website">
   <title>Hank Tsou Personnal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <img src="https://avatars1.githubusercontent.com/u/28382639?v=4?height=180&width=180" alt="Hank profile picture">
+  <img src="https://avatars1.githubusercontent.com/u/28382639?v=4?height=180&width=180" alt="Hank profile picture">
+
   <!-- <img src="images/Hank.jpg" alt="Hank profile picture"> -->
   <h1>Hank Tsou, header</h1>
   <a href="https://hank-tsou.github.io/Profile/">Real Personal Website</a>
@@ -22,7 +25,7 @@
     a Master's Degree in Computer Science with GPA 4.0, from California State
     Polytechnic University-Pomona.</p>
 
-  <hr size="3" noshade>
+  <hr>
   <!-- ----------------------------------------------------------------------- -->
 
   <h2>Education, list</h2>
