--- a/index.html
+++ b/index.html
@@ -5,112 +5,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" contant="Hank Tsou">
-  <meta name="description" content="Hank's personnal website">
-  <title>Hank Tsou Personnal Site</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="description" content="Broccoli">
+  <title>Broccoli</title>
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <img src="https://avatars1.githubusercontent.com/u/28382639?v=4?height=180&width=180" alt="Hank profile picture">
-  <img src="https://avatars1.githubusercontent.com/u/28382639?v=4?height=180&width=180" alt="Hank profile picture">
+  <div class="top-bar">
+    <h1>Broccoli-Foody</h1>
+  </div>
+  </div>
 
-  <!-- <img src="images/Hank.jpg" alt="Hank profile picture"> -->
-  <h1>Hank Tsou, header</h1>
-  <a href="https://hank-tsou.github.io/Profile/">Real Personal Website</a>
-  <p><em>Software Engineer at <strong> Cal Poly Pomona</strong>.</em></p>
-  <p>Hi, I'm Yueh-Lin Tsou (Hank), an experienced research assistant with a
-    demonstrated history of working in the higher education industry. Comfortable
-    programming in Java, Python, and C/C++. Skilled in HTML/CSS, MongoDB, AWS,
-    Javascript, Web Framework, OpenCV, Keras, Pandas, and Numpy. Currently pursuing
-    a Master's Degree in Computer Science with GPA 4.0, from California State
-    Polytechnic University-Pomona.</p>
-
-  <hr>
-  <!-- ----------------------------------------------------------------------- -->
-
-  <h2>Education, list</h2>
-  <ul>
-    <li>California Polytecnic University, Pomona</li>
-    <li> National Taiwan Ocean University</li>
-  </ul>
-
-  <hr>
-  <!-- ----------------------------------------------------------------------- -->
-
-  <h2>Technical Skills, nest list</h2>
-  <ol>
-    <li>Web Development
-      <ul>
-        <li>task 1</li>
-        <li>task 2</li>
-      </ul>
-    </li>
-
-    <li>Machine Learning
-      <ol>
-        <li><a href="https://hank-tsou.github.io/Profile/#page3">task 1</a></li>
-        <li>task 2</li>
-      </ol>
-    </li>
-
-    <li>Computer Vision
-      <ol type="i">
-        <li>task 1</li>
-        <li>task 2</li>
-      </ol>
-    </li>
-  </ol>
-
-  <hr>
-  <!-- ----------------------------------------------------------------------- -->
-
-  <h2>Working Experience, table-header, body, footer</h2>
-  <table cellspacing = "10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2017-2019</td>
-        <td>Research Assistant</td>
-      </tr>
-      <tr>
-        <td>2015</td>
-        <td>IT Engineer</td>
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-  </table>
-
-  <hr>
-  <!-- ----------------------------------------------------------------------- -->
-
-  <h2>Skills, table</h2>
-  <table cellspacing = "10">
-    <tr>
-      <td>computer vision</td>
-      <td>★★★</td>
-    </tr>
-    <tr>
-      <td>machine learning</td>
-      <td>★★★★</td>
-    </tr>
-    <tr>
-      <td>software engineer</td>
-      <td>★★★★★</td>
-    </tr>
-  </table>
-
-  <hr>
-  <!-- ----------------------------------------------------------------------- -->
-
-  <h3><strong><a href="contact.html">contanct me</a></strong></h3>
-
+  </div>
 
 
 </body>
